crates/capsec-tests/tests/compile_fail/sealed_impl_from_outside.stderr
error[E0046]: not all trait items implemented, missing: `__CapsecSeal`
  --> tests/compile_fail/sealed_impl_from_outside.rs:11:1
   |
11 | impl Permission for EvilPerm {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `__CapsecSeal` in implementation
   |
   = help: implement the missing item: `type __CapsecSeal = /* Type */;`
